Extra-Libraries: ldap
-- End detected settings section.  Everything below here should not
-- need editing.
Name: LDAP
Version: 0.5.2
License: BSD3
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Beta
Copyright: Copyright (c) 2005-2006 John Goerzen
-- C-Sources: glue/glue.c
Exposed-Modules: LDAP,
 LDAP.Types,
 LDAP.Init,
 LDAP.Constants,
 LDAP.Data,
 LDAP.Exceptions,
 LDAP.Search,
 LDAP.Modify
Other-Modules: LDAP.Utils,
 LDAP.TypesLL,
 LDAP.Result
Build-Depends: base
GHC-Options: -O2
-- CC-Options: -Iglue
Extensions: ForeignFunctionInterface, TypeSynonymInstances
