Extra-Libraries: ldap
-- End detected settings section.  Everything below here should not
-- need editing.
Name: LDAP
Version: 0.6.5
License: BSD3
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Stability: Beta
Copyright: Copyright (c) 2005-2009 John Goerzen
homepage: http://software.complete.org/ldap-haskell
Category: Network
Synopsis: Haskell binding for C LDAP API
license-file: COPYRIGHT
extra-source-files: COPYING

Build-Type: Simple
Cabal-Version: >=1.2.3

Flag buildtests
  description: Build the executable to run unit tests
  default: False

Library
  -- C-Sources: glue/glue.c
  Exposed-Modules: LDAP,
   LDAP.Types,
   LDAP.Init,
   LDAP.Constants,
   LDAP.Data,
   LDAP.Exceptions,
   LDAP.Search,
   LDAP.Modify
  Other-Modules: LDAP.Utils,
   LDAP.TypesLL,
   LDAP.Result
  Build-Depends: base
  GHC-Options: -O2
  -- CC-Options: -Iglue
  CC-Options: -DLDAP_DEPRECATED=1
  Extensions: ForeignFunctionInterface, TypeSynonymInstances,
              EmptyDataDecls, PatternSignatures

Executable runtests
  if flag(buildtests)
    Buildable: True
  else
    Buildable: False
  Main-Is: runtests.hs
  CC-Options: -DLDAP_DEPRECATED=1
  Extensions: ForeignFunctionInterface, TypeSynonymInstances,
              EmptyDataDecls, PatternSignatures
  Hs-Source-Dirs: testsrc, .
  GHC-Options: -O2
